# engine

./: CMakeLists.txt  Makefile  README.md  demo.txt  jungla.txt  nieco.txt  test.txt
include/: FBOShader.h  FDraw.h  Node.h  abs_sdl.h  animation.h  animator.h  asset_manager.h  bone.h  camera.h  camera_node.h  config.h  controler.h  engine.h  env.h  first_person_camera.h  fnode.h  fyzika.h  gui.h  lights.h  material.h  mesh.h  mesh_node.h  model.h  model_node.h  orbit_camera.h  player_con.h  renderer.h  scene.h  shader.h  third_person_camera.h  transform.h
models/anim/: animacka.fbx  attack.fbx  back.fbx  base.fbx  idle.fbx  kill.fbx  walk.fbx
models/dust/: dust.mtl  untitled.blend
models/jungle/: scena.fbx
models/kocka/: blue.fbx  combo.fbx  kocka.blend  kocka.blend1  kocka.fbx  material.blend  material_test.fbx  mix.fbx  neviem.fbx  node_test.fbx  node_test_dva.fbx  red.fbx  untitled.blend  untitled.blend1
models/kocky/: kocka.fbx  kocky.fbx
models/low_poly/: scena.fbx
repo_models/test/: kocka.fbx
shaders/: base_fragment.glsl  base_vertex.glsl  fragment.glsl  vertex.glsl
src/: FBOShader.cpp  FDraw.cpp  FNode.cpp  abs_sdl.cpp  animation.cpp  animator.cpp  asset_manager.cpp  bone.cpp  camera.cpp  camera_node.cpp  config.cpp  controler.cpp  engine.cpp  env.cpp  first_person_camera.cpp  framebuffer.cpp  fyzika.cpp  gui.cpp  lights.cpp  main.cpp  material.cpp  mesh.cpp  mesh_node.cpp  model.cpp  model_node.cpp  node.cpp  orbit_camera.cpp  player_con.cpp  renderer.cpp  scene.cpp  shader.cpp  transform.cpp
